# africalim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  cliff.toml  pyproject.toml  tbump.toml
.devcontainer/: devcontainer.json
.github/workflows/: update-cabs.yml
src/africalim/: __init__.py  _container_image.py
src/africalim/cabs/: config_path.yml  config_set.yml  config_show.yml  export.yml  janskie.yml  onboard.yml
src/africalim/cli/: __init__.py  config_path.py  config_set.py  config_show.py  export.py  janskie.py  onboard.py
src/africalim/core/: __init__.py  config_path.py  config_set.py  config_show.py  export.py  janskie.py  onboard.py
src/africalim/utils/: __init__.py  consent.py  consent_text.py  corpus_config.py  deps.py  logger.py  models.py  pricing.py  retrieval.py  runner.py  user_config.py
tests/: conftest.py  test_install.py  test_roundtrip.py
tests/cli/: test_cli_smoke.py  test_config.py  test_export.py
tests/fixtures/: __init__.py
tests/unit/: test_config_corpus.py  test_config_user.py  test_consent.py  test_deps.py  test_export.py  test_janskie.py  test_logger.py  test_models.py  test_pricing.py  test_retrieval.py  test_retrieval_integration.py  test_runner.py
