[project]
name = "africalim"
version = "0.0.1"
description = "Radio astronomy tidbits"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "landmanbester", email = "lbester@sarao.ac.za" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "hip-cargo>=0.2.1",
    "typer>=0.12.0",
    "pydantic>=2.0",
    "pydantic-ai>=1.90,<2",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "gitpython>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
review = [
    # Reserved for the v0.2.0 Streamlit review app.
]

[project.urls]
Homepage = "https://github.com/landmanbester/africalim"
Repository = "https://github.com/landmanbester/africalim"
"Bug Tracker" = "https://github.com/landmanbester/africalim/issues"

[project.scripts]
africalim = "africalim.cli:app"

[build-system]
# NOTE: This uv_build constraint is intentionally aligned with hip-cargo's own pyproject.toml.
# If you bump uv_build in hip-cargo, update this template constraint to match.
requires = ["uv_build>=0.8.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    # Synthetic test corpus committed as a fixture; its content (and commit
    # hashes) must stay stable, so it is excluded from linting/formatting.
    "tests/fixtures/mini_corpus",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take more time to run",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.13.0",
    "tbump>=6.11.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
